--- a/CS21120_Data_Structures_Algorithms/211_05_Stack.md
+++ b/CS21120_Data_Structures_Algorithms/211_05_Stack.md
@@ -7,11 +7,18 @@ Notes: ela12@aber.ac.uk
 > Workshop Worksheet 1 has been published - "Matching Brackets". Tutorial Worksheet 2 has been published as well, "Arrays, Lists, Stacks and Queues". 
 
 ## Recap of The List ADT 
-- A list: a linear sequence of elements. 
-- Linked List: a collection of **nodes** that collectively form a linear sequence. 
-- Implementing a singly linked list... the order of link changes matter when changing the order of a singly linked list. 
+- List abstract data type: a linear sequence of elements. 
+- Some operations we could perform on a list:
+	- Retrieve an element from the list
+	- Add an element to the list
+	- Remove an element from the list
+	- Edit an element already in the list
+	- Auxiliary methods (isEmpty(), size())
 
 ### Singly Linked Lists 
+
+- Linked List: a collection of **nodes** that collectively form a linear sequence. 
+- Implementing a singly linked list... the order of link changes matter when changing the order of a singly linked list. 
 
 #### Inserting at the Tail 
 
